# JRift

./: .gitignore  .gitmodules  README.md
JRift/: pom.xml
JRift/src/de/fruitfly/ovr/: EyeRenderParams.java  FullPoseState.java  OculusRift.java
JRift/src/de/fruitfly/ovr/structs/: ErrorInfo.java  FullPoseState.java  GLConfig.java  HmdDesc.java  HmdParameters.java  Matrix4f.java  PoseStatef.java  Posef.java  Quatf.java  RenderTextureSet.java  SwapTextureSet.java  TrackerState.java
JRiftLibrary/: CMakeLists.txt  build_linux.sh  build_osx.sh  build_windows.bat  natives-windows.xml  pom.xml
JRiftLibrary/JRiftLibrary/: JRiftLibrary.cpp  JRiftLibrary_2012.vcxproj  Makefile  de_fruitfly_ovr_OculusRift.h
JRiftLibrary/LibOVR/Projects/Win32/VS2012/: LibOVR.vcxproj  LibOVR.vcxproj.filters
JRiftLibrary/LibOVR/Src/: OVR_Stereo.cpp
JRiftLibrary/LibOVR/Src/CAPI/: CAPI_HSWDisplay.cpp
JRiftLibrary/LibOVR/Src/CAPI/GL/: CAPI_GL_DistortionRenderer.cpp
JRiftLibrary/LibOVR/Src/Util/: OptionMenu.h
JRiftLibrary/natives/osx/: libJRiftLibrary.jnilib  libJRiftLibrary64.jnilib
JRiftLibrary/src/: JRiftLibrary.cpp  de_fruitfly_ovr_OculusRift.h
